Complete typescriptification - add index.d.ts - update fontawesome packages to fix ts errors - move visibility styling to css - address various ts warnings

--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -112,6 +112,9 @@
   margin-top: 1rem;
 }
 
+.card-content.active {
+  visibility: visible;
+}
 /* -------------------------------------------------------------------------- */
 /*                              RESPONSIVE STYLES                             */
 /* -------------------------------------------------------------------------- */
